--- a/src/Components/Page/SearchResults/SearchResults.css
+++ b/src/Components/Page/SearchResults/SearchResults.css
@@ -1,9 +1,17 @@
+.result-view{
+    width: 100%;
+    display: flex;
+}
+
+.results-menu{
+    width: 20%;
+}
+
 .cards-content{
-    margin: auto;
     outline: solid 1px red;
     width: 80%;
     display: flex;
     flex-direction: column;
-    padding: 2em;
+    padding: 1em 2em;
     gap: 1em;
 }
