--- a/src/Components/UI/ResultCards/ResultCards.css
+++ b/src/Components/UI/ResultCards/ResultCards.css
@@ -1,13 +1,16 @@
 .card-render-container{
-    outline: solid 1px red;
     border-radius: 5px;
     display: flex;
     width: 100%;
+    border : solid .1px rgb(210,210,210);
     height: 12em;
+    gap: 1em;
+    box-shadow: 1px 5px 4px -4px #919191;
+    background-color: rgba(200,200,200,0.10);
 }
 
 .image-url-container{
-    width: 30%;
+    width: 25%;
     outline: solid 1px red;
 }
 
@@ -18,6 +21,23 @@
 }
 
 .card-info-render{
-    width: 70%;
+    width: 75%;
+    outline: solid 1px red;
+    padding: 0.4em;
 }
 
+.open-anouncement{
+    padding: 1em 2em;
+}
+
+.principal-render-card{
+    outline: solid 1px red;
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+}
+
+.button-anouncement-redirect{
+    display: flex;
+    justify-content: flex-end;
+}
