--- a/src/Components/Page/AboutUs/AboutUs.css
+++ b/src/Components/Page/AboutUs/AboutUs.css
@@ -1,5 +1,6 @@
 .textTitle-nosotros{
     color: #ffffff;
+    font-size: 3rem;
     /* text-align: center; */
 
 }
@@ -14,30 +15,32 @@
 .link-documentation{
     margin: 15px;
     text-decoration: none;
-    color: #000;
+    color:rgba(136,136,136,0.70);
     display: block;
 }
 
-a::after{
+.link-documentation::after{
     content: '';
     display: block;
     width: 0;
     height: 2px;
-    background-color: #000;
+    background-color: rgba(136,136,136,0.70);;
     /* transition: width 3.s; */
     transition: width 0.25s ease-out;
 }
-a:hover::after{
+.link-documentation:hover::after{
     width: 100%;
     transition: width 3.s;
 }
 .grid-div{
     background-color: #f4f4f4;
     width: 350px;
-    height: 250px;
+    height: 260px;
     /* margin: 10px; */
     border-radius: 9px;
     margin: auto;
+    padding: 15px;
+    color:rgba(136,136,136,0.70);
     
 }
 
@@ -57,8 +60,7 @@ a:hover::after{
 }
 
 .title-content{
-    /* background-color: #000; */
-    height:200px ;
+    height:300px ;
     display: flex;
     justify-content: center;
     align-items: center;
