--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -22,7 +22,7 @@
 .header-logo-container{
     display: flex;
     align-items: center;
-    width: 15%;    
+    width: 15%; 
 }
 
 .logo-content{
@@ -76,6 +76,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    max-width: 300px;
 }
 
 .nouser-action{
@@ -98,6 +99,44 @@
 
 .icon-none{
     display: none;
+}
+
+.miniature-name{
+    width: 80%;
+}
+
+.miniature-container{
+    width: 50%;
+}
+
+
+.miniature-container{
+    width: 85%;
+    gap: 1em;
+    align-items: center;
+    display: flex;
+    border-radius: 5px;
+    background: #FFF;
+    padding: 0.5em  1em    ;
+}
+
+.miniature-photo-container{
+    width: 2.7em;
+    height: 2.5em;
+    border-radius: 255px;
+}
+
+.profile-header{
+    width: 85%;
+    display: flex;
+    align-items: center;
+}
+
+.miniature-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 255px;
 }
 
 @media screen and (max-width : 1050px ){
@@ -123,12 +162,26 @@
         font-size: 0.7em;
         padding: 1em 0;
     }
+
+    .miniature-photo-container{
+        width: 2.4em;
+        height: 2em;
+    }
 }
 
+.actions-profile{
+    justify-content: flex-end;
+}
 @media screen and ( max-width : 860px){
 
+    .miniature-container{
+        margin: 0 1em;
+        width: 100%;
+    }
+
+
     .header-container{
-        padding: 0.7em 0;
+        padding: 0.3em 0;
     }
     .logo-content{
         display: none
@@ -144,13 +197,44 @@
     }
 }
 
+@media screen and (max-width: 770px){
+    .miniature-container{
+        width: 50%;
+    }
+
+    .miniature-name{
+        display: none;
+    }
+
+    .profile-header{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .user-activate{
+        width: 20%;
+        padding: 0 1em;
+    }
+}
+
 @media screen and (max-width: 720px ){
     .header-container{
-        padding: 0.5em 0;
+        padding: 0.1em;
+    }
+
+    .miniature-container{
+        width: 100%;
+        padding: 0.2em;
     }
 
     .header-logo-container{
         width: 15%;
+    }
+
+    .user-activate{
+        width: 15%;
+        padding: 0;
     }
 
     .header-action-button{
@@ -187,4 +271,19 @@
   .header-logo-container{
       width: 20%;
   }
+
+  .miniature-container{
+      width: 100%;
+      padding: 0.2em 0.2em;
+  }
+
+  .miniature-photo-container{
+      height: 1.7em;
+  }
+
+  .actions-profile{
+      width: 20%;
+      padding: 0.2em;
+
+    }
 }
