--- a/src/Components/Modal/ProfileSettings/ProfileSettings.css
+++ b/src/Components/Modal/ProfileSettings/ProfileSettings.css
@@ -1,11 +1,7 @@
 
 .profile-modal-activate{
-    padding: 1.05em 1.6em;
-    border-radius: 5px;
     border: none;
-    transition: 0.3s ease;
-    cursor: pointer;
-    background: rgb(255,255,255);
+    background: none;
 }
 
 .profile-modal-activate:hover{
