--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -50,6 +50,11 @@
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 12px 1px rgba(0, 0, 0, 0);
 }
 
+.prop-email{
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .anouncement-aditional-info{
     width: 25%;
     background: rgba(0,0,0,0.18);
