--- a/src/Components/Modal/ProfileSettings/ProfileSettings.css
+++ b/src/Components/Modal/ProfileSettings/ProfileSettings.css
@@ -2,6 +2,8 @@
 .profile-modal-activate{
     border: none;
     background: none;
+    padding: 0.5em;
+    border-radius: 5px;
 }
 
 .profile-modal-activate:hover{
@@ -13,6 +15,7 @@
 }
 
 .settings-basic-info{
+    position: relative;
     width: 90%;
     margin: 0 auto;
     border-radius: 5px;
@@ -56,6 +59,14 @@
     height: 4.5em;
     width: 25%;
 }
+
+.status{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }  
 
 .settings-image{
     width: 100%;
