--- a/src/Components/Layout/Footer/Footer.css
+++ b/src/Components/Layout/Footer/Footer.css
@@ -1,56 +1,76 @@
-.footer-container{
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Palette+Mosaic&display=swap');
+
+.register-footer-container{
     width: 100%;
-    height: auto;
-    padding: 1% 0;
-    outline: 1px solid black;
+    background: rgba(35,35,35,0.95);
+    text-align: center;
+    padding: 1em 0 ;
 }
 
-.footer-links{
-    width: 80%;
+.footer-icons{
+    width: 100%;
+    margin: 1em 0;
     display: flex;
-    margin: 0  auto;
-    text-align: center;
     justify-content: center;
+    gap: 1em;
 }
 
-.icon-links{
-    width: 40%;
-    margin: 3% auto;
+.footer-icon{
+    background: rgba(15,15,15,0.70);
+    font-size: 130%;
+    border-radius: 250px;
+    padding: 10px;
+    color:rgb(89,228,168);
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+.footer-icon:hover {
+    background-color:rgba(165, 164, 164, 0.7);
+}
+
+.footer-title{
+    letter-spacing: 2px;
+    font-family:'Poppins', sans-serif;
+    color: #FFFFFF;
+    font-size: 1.5em;
+}
+
+.footer-relinks{
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: center;
+    gap: 3em;
+    font-size: 70%;
+    color: rgba(154,204,207,1);
+}
+.footer-textInfo{
+    text-decoration: none;
+    color: rgba(154,204,207,1);
+}
+.footer-textInfo:hover{
+    text-decoration: none;
+    color: rgba(154,204,207,1);
 }
 
-.redirect{
-    margin:0 5%;
-}
+@media screen and (max-width:630px){
 
-.icon{
-    font-size: 5vh;
-}
+    .footer-title{
+        font-size: 1.2em;
+        letter-spacing: 1px;
+    }
 
-.footer-info{
-    width: 50%;
-    margin: 1% auto;
-    text-align: center;
-}
+    .footer-relinks{
+        width: 100%;
+        font-size: 41%;
+        padding: 0 1em;
+        justify-content:space-between;
+    }
 
-.line-footer{
-    width: 65%;
-    height: .1px;
-    margin: 1% auto;
-    background: grey;
-}
+    .footer-icons{
+        gap: 0.4em;
+    }
 
-.copyright{
-    width: 50%;
-    margin: 1% auto;
-    text-align: center;
-}
-
-.icon-link{
-    width: 6%;
-}
-
-.footer-text{
-    margin: 1% 0;
+    .footer-textInfo{
+        width: 25%;
+    }
 }
