--- a/src/Components/Layout/ForgotPasswordForm/ForgotPasswordForm.css
+++ b/src/Components/Layout/ForgotPasswordForm/ForgotPasswordForm.css
@@ -1,9 +1,10 @@
 .forgot-password-container{
-    width: 35%;
-    padding: 3% 4% 2% 4%;
+    width: 500px;
+    padding: 2em 2em 1em 2em;
     -webkit-box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.60); 
     box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.60);
     background: #FFFFFF;
+    border-radius: 5px;
 }
 
 .body-container{
@@ -12,22 +13,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(110,217,182);
-    background: linear-gradient(90deg, rgba(110,217,182,0.87718837535014) 53%, rgba(111,161,126,1) 100%);
+    background:  linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%),url("https://cdn.pixabay.com/photo/2018/03/19/18/46/driveway-3240834_960_720.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .forgot-title{
-    margin: 4% 0;
-    width: 90%;
+    margin: 0.3em 0;
+    width: 100%;
+    font-size: 2em;
+    color: rgb(37,46,53);
 }
 
 
 .email-put{
     width: 100%;
-    border: none;
-    border-bottom: .1px solid grey;
-    padding: 1% 2%;
+    margin: 0.2em 0 0.3em 0;
     outline: none;
+    border: none;
+    padding: 2% 2%;
+    border-radius: 5px;
+    border: solid .1px rgba(136,136,136,0.60);
+}
+
+.email-put:focus{
+    outline: 1px solid #324439;
 }
 
 .create-account{
@@ -43,20 +53,20 @@
 }
 
 .send-email{
-    padding: 2%;
+    margin: 1.2em 0 0 0;
+    padding: 0.9em 1.5em;
+    border-radius: 5px;
     width: 40%;
-    margin: 4% 0 0 0;
-    background-color: rgba(111,161,126,1);
-    color: #FFFFFF;
+    color: rgb(89,228,168) ;
+    background : rgb(37,46,53);
+    font-weight: bolder;
     border: none;
     cursor: pointer;
     transition: ease .3s;
 }
 
 .send-email:hover {
-    
     transform: scale(105%);
-    
 }
 
 .send-content{
@@ -68,40 +78,23 @@
 .send-register{
     font-size: 80%;
     text-decoration: underline;
-    width: 120%;
-    padding: 0 5%;
-    
+    width: 100%;
+    margin-left: 0.3em;
+    color: #3b5998;
 }
 
-@media screen and (max-width: 1250px){
+@media screen and (max-width: 530px){
     .forgot-password-container{
-        width: 50%;
+        width: 450px;
     }
 }
 
-@media screen and (max-width: 900px){
-    .forgot-password-container{
-        width: 60%;
-    }
-}
-
-@media screen and (max-width: 800px){
-    .forgot-password-container{
-        width: 80%;
-    }
-}
-
-@media screen and (max-width: 500px){
-    .forgot-password-container{
-        width: 90%;
-    }
-
+@media screen and (max-width: 470px){
     .forgot-title{
-        font-size: 90%;
+        font-size: 1.5em;
     }
-
-    .create-account{
-        font-size: 90%;
-        margin: 1% 1%;
+    .forgot-password-container{
+        width: 350px;
+        padding: 1em 1.5em;
     }
 }
