--- a/src/Components/Modal/ModalCreateAnouncement/ModalCreateAnouncement.css
+++ b/src/Components/Modal/ModalCreateAnouncement/ModalCreateAnouncement.css
@@ -4,8 +4,6 @@
     padding: 0.5em 2em;
 }
 
-/* button */
-
 .noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -84,27 +82,27 @@
 
 .header-modal-icon{
     padding: 0.3em 0;
-    font-size: 20px;
+    font-size: 15px;
     cursor: pointer;
 }
 .create-progress {
     display: flex;
-    width: 60%;
-    justify-content: space-between;
-    margin: 1em auto;
+    width: 100%;
+    justify-content: center;
+    gap: 5em;
+    align-items: center;
+    margin: 1em auto 0.5em auto;
+    font-weight: bolder;
+    color: rgb(37, 46, 53);
 }
 
-.secondary-create-form{
-    height: 50%;
-}
- 
 .modality-medium{
     display: flex;
     width: 100%;
     gap: 0.5em;
 }
 .create-title {
-    outline: solid 1px black;
+    color:rgb(37, 46, 53);
 }
 
 .close-svg {
@@ -114,23 +112,35 @@
 
 
 .header-modal {
-    padding: 0.2em 0.5em;
+    padding: 0.1em 0.5em;
     width: 100%;
     display: flex;
     justify-content: flex-end;
-  
+}
+
+.form-stage-none{
+    width: 2em;
+    height: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-stage {
+    padding: 0;
+    margin: 0;
+    height: 2em;
     width: 2em;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: rgb(37, 46, 53);
-    color: white;
+    color: rgb(89,228,168) ;
     border-radius: 250px;
 }
 
 .create-subtitle {
-    outline: solid 1px black;
+    color: rgb(37, 46, 53);
     width: 100%;
 }
 
@@ -140,36 +150,20 @@
     width: 100%;
     padding: 2%;
     height: 335px;
-    outline: solid 1px black;
 }
 
-.create-action-button {
-    font-weight: bolder;
-    font-size: 105%;
-    padding: 2% 5%;
-    border-radius: 5px;
-    border: none;
-    transition: .4s ease;
-    color: #FFFFFF;
-    background: rgb(37, 46, 53);
-    cursor: pointer;
-}
-
-.create-action-button:hover {
-    background: rgb(89, 228, 168);
-    color: rgb(37, 46, 53);
-    transform: scale(101%);
-}
 
 .first-action-container {
-    padding: 1% 0;
+    padding: 0 0.5em;
     display: flex;
     justify-content: flex-end;
-    
+}
+
+.create-action-button{
+    margin: 0;
 }
 
 .create-action-container {
-    padding: 1% 0;
     display: flex;
     justify-content: space-between;
 }
@@ -177,39 +171,31 @@
 .create-info {
     display: flex;
     flex-direction: column;
+    height: 320px;
 }
-
-
-/* form 1 */
 
 .create-description {
-    width: 100%;
-    padding: 2% 2%;
-    border-radius: 5px;
-    border: solid .1px rgba(136, 136, 136, 0.60);
-    height: 14em;
+    height: 160px;
 }
 
-.create-input-add {
-    width: 100%;
-    margin: 2% 0;
-    padding: 2% 2%;
-    border-radius: 5px;
-    border: solid .1px rgba(136, 136, 136, 0.60);
-}
 .row{
-    outline: solid 1px black;
-    width: 100%;
-     height:20em;
-     display: grid;
-     grid-template-columns: 25% 25% 25% 25%;
-     grid-template-rows: 25%;
+    margin: 1em 0 0.5em 0;
+    border-radius: 5px;
+    height:200px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    overflow-y: auto;
+    border-radius: 5px;
+    background: url(https://res.cloudinary.com/easyhouserent/image/upload/v1654022187/EHR/profiles/reungo1mxygxsijhxb5f.svg);
+    background-size: cover;
+    box-shadow: inset 0px 0px 24px -3px #a6a4a4;
 }
 
 .content_img{
-     outline: solid 1px black;
-     width: 100%;
-     height: 10em;
+     margin: 0.5em auto;
+     width: 90%;
+     border-radius: 5px;
+     height: 7em;
      position: relative;
      display: flex;
      justify-content: flex-start;
@@ -219,25 +205,50 @@
 .img-responsive{
     width: 100%;
     height: 100%;
-    object-fit: contain;
-    outline: solid 1px red;
+    object-fit: cover;
+    border-radius: 5px;
 }
+
 .image-delete{
     display: none;
 }
 
 .content_img:hover .image-delete {
     position: absolute;
+    margin: 0.35em;
     transition: 0.3s ease;
-    display: inline-block;
+    width: 1.7em;
+    height: 1.7em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+    border: none;
     border-radius: 255px;
-    background: rgb(0,0,0);
-    color: rgb(255,255,255);
-    margin: 0.2em 0 0 0.2em;
-    padding: 0.2em 0.7em;
-    transition: 0.3s ease;
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    font-weight: bolder;
+    outline: .1px solid rgb(100,100,100);
+    
 }
 
+.select-files{
+    margin: 0 auto;
+    width: 225px;
+    padding: 0.5em;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    color: #fff;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.65);
+    box-shadow: rgb(0 0 0 / 44%) 0px 2px 2px 0px, rgb(0 0 0 / 44%) 0px 0px 1px 0px;
+    border: 1px solid rgba(0,0,0,0.4) ;
+    transition: 0.3s ease all;
+}
 
- 
+.select-files:hover{
+    color: rgba(0,0,0,0.65);
+    width: 245px;
+}
