--- a/src/Components/UI/ResultCards/ResultCards.css
+++ b/src/Components/UI/ResultCards/ResultCards.css
@@ -2,28 +2,24 @@
     border-radius: 5px;
     display: flex;
     width: 100%;
-    height: 14em;
+    height: 15em;
     gap: 1em;
     box-shadow: 1px 5px 11px -2px #919191;
     background-color: rgb(255,255,255);
 }
-
 .image-url-container{
     width: 25%;
 }
-
 .image-url-render{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 5px 0 0px 5px;
 }
-
 .card-info-render{
     width: 75%;
     padding: 0.4em;
 }
-
 .open-anouncement{
     padding: 1em 2em;
     background: rgba(15,15,15,0.70);
@@ -32,23 +28,140 @@
     transition: 0.3s ease;
     cursor: pointer;
     border-radius: 5px;
-
 }
-
-
 .open-anouncement:hover{
     transform: scale(102%);
-
 }
-
 .principal-render-card{
     width: 100%;
     display: flex;
     align-items: stretch;
 }
-
 .button-anouncement-redirect{
     display: flex;
-    justify-content: flex-end;
-    
+    justify-content: flex-end;   
+}
+
+@media screen and (max-width: 900px){
+    .card-render-container{
+        height:16em;
+    }
+    .image-url-container{
+        width: 50%;
+    }
+    .open-anouncement{
+        margin-top:5%;
+    }
+}
+
+@media screen and (max-width:616px)
+{
+    .card-render-container{
+        width:100%;
+        height:10em;
+        gap:2%;
+    }
+    .open-anouncement{
+        margin-top:5%;
+        width:100%;
+        font-size:13px;
+        padding:5px 0px;
+    }
+    .card-info-render{
+        height:10em;
+    }
+    .image-url-container{
+        width:40%;
+        height:10em;
+    }
+    .card-info-render{
+        width:60%;
+        padding: 0.2em;
+    }
+    .principal-render-card {
+        margin-bottom:1%;
+        font-size:13px;
+    }
+    .card-render-add-data{
+        font-size:13px;
+    }
+    .infoCardSearch {
+        display:none;
+    }
+    .descriptionCardSearch {
+        display:flex;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .card-render-container{
+        width:100%;
+        height:8em;
+        gap:2%;
+    }
+    .card-info-render{
+        height:8em;
+    }
+    .image-url-container{
+        width:45%;
+        height:8em;
+    }
+    .card-info-render{
+        width:55%;
+        padding: 0.2em;
+    }
+    .principal-render-card {
+        margin-bottom:1%;
+        font-size:11px;
+    }
+    .card-render-add-data{
+        font-size:12px;
+    }
+    .open-anouncement {
+        margin:8% auto;
+    }
+    .infoCardSearch{
+        display:none;
+    }
+    .open-anouncement{
+        width:95%;
+        font-size:10px;
+        padding:5px 0px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .card-render-container{
+        height:7em;
+        gap:5px;
+    }
+    .image-url-container {
+        width:45%;
+        height:7em;
+    }
+    .card-info-render{
+        width:50%;
+        padding: 0.2em;
+    }
+    .principal-render-card {
+        margin-bottom:1%;
+        font-size:11px;
+    }
+    .card-render-add-data{
+        font-size:12px;
+    }
+    .open-anouncement {
+        margin:3% auto;
+    }
+    .infoCardSearch{
+        display:none;
+    }
+    .textInfoCardSearch{
+        display:none;
+    }
+    .open-anouncement{
+        width:90%;
+        font-size:10px;
+        padding:5px 0px;
+    }
 }
