--- a/src/Components/Page/SearchResults/SearchResults.css
+++ b/src/Components/Page/SearchResults/SearchResults.css
@@ -1,16 +1,10 @@
 .cards-content{
-    margin: auto;
-    width: 100%;
+    background:  linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%),url("https://images.unsplash.com/photo-1531824475211-72594993ce2a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+    background-repeat: repeat-y;
+    padding: 1em;
+    background-size: 100%;
     display: flex;
-    flex-direction: column;
-    padding: 1em 10%;
-    gap: 1em;
-    background: rgba(0,0,0,0.2);
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.5em;
 }
 
-@media screen and ( max-width : 750px ){
-    .cards-content{
-        padding: 1em 0.5em;
-    }
-}
