--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -36,7 +36,6 @@
     height: 100%;
     object-fit: cover;
 }
-
 .header-logo{
     cursor: pointer;
     font-weight: bolder;
@@ -108,8 +107,7 @@
 
 .miniature-name{
     width: 80%;
-    font-family: sans-serif;
-    color: rgba(15, 15, 15, 1);
+    color: rgba(35,35,35,0.95);
 }
 
 .miniature-container{
