--- a/src/Components/Page/Contact/Contact.css
+++ b/src/Components/Page/Contact/Contact.css
@@ -1,64 +1,51 @@
-.div-contact-container {
-	width:70%;
-	background: rgb(229,229,229);
-	margin:3% auto;
-	display:flex;
-	height:650px;
-	align-items:center;
+/*.Card-Render-Container*/
+.div-container-contact-us {
+    height: 500px;
+    max-width: 800px;
+    width: 100%;
+    margin: 1em auto 0.5em auto;
+    display: flex;
+    align-items: center;
 }
-.title-contactUs {
-	text-align:center;
+
+/*Card-Img-Render*/
+.div-contact-us{
+	border-radius: 5px;
+    height: 400px;
+    width: 300px;
+    position: absolute;
+    border-radius: 10px;
+	background-color:rgb(89,228,168);
+    z-index: 1;
+	padding:1%;
+}
+
+/*Card-Info-Render*/
+.div-contact-touch{
+	color: rgb(37,46,53);
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 2.5em;
+    position: relative;
+    border-radius: 10px;
+	background: rgba(35,35,35,0.95);
+    box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.45);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+	justify-content:center;
+    padding: 1em 1em 0.5em 1em;
+	color:white;
 }
 .title-contact-touch {
 	text-align:center;
 }
-.div-titles-touch{
-	width:50%;
+.title-contact-us {
 	text-align:center;
 }
-.form-contactUs {
-	width: 500px;
-	display: flex;
-	flex-direction: column;
-	padding: 30px;
-	align-items: center;
-	margin:auto;
+.info-form-contact{
+	width:70%;
 }
-.div-contactUs {
-	width:30%;
-	height:450px;
-	margin:2.5%;
-	position:relative;
-	justify-content:center;
-	align-items:center;
-	background-color:rgb(89,228,168);;
-	z-index:1;
-	padding:2%;
-}
-.div-contact-touch {
-	width:50%;
-	position:absolute;	
-	left:23%;
-	margin:2.5% auto;
-	height:550px;
-	color:rgb(250,250,250);
-	background: rgba(35,35,35,0.95);
-	justify-content:center;
-	align-items:center;
-	text-align:end;
-}
-.input-contact{
-	width:60%;
-	padding:5px;
-	outline:none;
-	margin-bottom:2%;
-}
-.textarea-contact{
-	width:60%;
-	padding:5px;
-	outline:none;
-}
-.btn-contactUs {
-	width:60%;
-	padding:5px;
+.form-contact-us{
+	text-align:center;
 }
