--- a/src/Components/UI/ContactUs/ContactUs.css
+++ b/src/Components/UI/ContactUs/ContactUs.css
@@ -1,72 +1,74 @@
-.render-container-contact-us{
-    margin:3% auto;
-}
 .div-container-contact-us {
-    height: 600px;
-    max-width: 800px;
-    width: 100%;
-    margin: 1em auto 0.5em auto;
+    height: 500px;
+    width: 700px;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    padding: 0
 }
 .div-contact-us{
 	border-radius: 5px;
-    height:500px;
-    width: 325px;
+    height:400px;
+    width: 330px;
     position: absolute;
     border-radius: 10px;
-    background: rgb(229,229,229);
+    background: rgba(35,35,35);
     z-index: 1;
-	padding:1%;
+	padding:1em 0.5em;
 }
 .div-contact-touch{
 	color: rgb(37,46,53);
-    width: 100%;
-    height: 100%;
-    margin: 0 0 0 2.5em;
+    width: 700px;
+    margin: 0 0 0 3em;
     position: relative;
     border-radius: 10px;
-	background: rgba(35,35,35,0.95);
+	background: rgb(229,229,229);
     box-shadow: 5px 5px 4px 2px rgba(0,0,0,0.45);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 	justify-content:center;
-    padding: 1em 1em 0.5em 1em;
     color: rgb(229,229,229);
 }
-.info-form-contact{
-    width: 80%;
-    padding: 2% 2%;
-    margin: 1% 0;
-    border:none;
-    outline:none;
-    border-radius: 5px;
-    border: solid .1px rgba(136,136,136,0.60);
+
+.text-container-contact{
+    display: flex;
+    align-items: center;
+    gap: 0.2em;
+    margin: 0.5em;
 }
-.btn-send-contact{
-    margin-top:2%;
-	background-color:rgb(89,228,168);
-    outline: none;
-    border: none;
-    font-weight: bolder;
-    width: 80%;
-    padding: 0.7em;
-    border-radius: 5px;
-    font-size: 16px;
-    transition: all 0.3s ease;
+
+.form-contact-us{
+    width: 60%;
+    text-align: center;
+    padding: 0 0 1em 0;
+}
+
+.title-contact-us{
+    color: rgb(200,200,200);
+    font-family: 'Mulish', sans-serif;  
+    font-weight: bolder ;
+    font-size: 2em;
+    width: 100%;
+    text-align: center;
+    margin: 0.5em 0 1em 0;
+}
+
+.text-contact{
+    color: rgb(200,200,200);
+    font-family: 'Mulish', sans-serif;  
+    font-weight: bolder ;
+}
+
+.exit-contact{
+    font-size: 15px;
     cursor: pointer;
+    color: rgb(37,46,53);
 }
-.btn-send-contact:hover {
-    scale:105%;
-}
-.icons-contact{
-    margin-bottom:4%;
-}
-.icon-contact-us {
-	background: rgba(35,35,35,0.95);
-    font-size: 90%;
-    border-radius: 250px;
-    padding: 10px;
-    color:rgb(89,228,168);
+
+.header-contact{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    padding: 0.5em;
 }
