--- a/src/Components/Layout/SupportInfo/Support.css
+++ b/src/Components/Layout/SupportInfo/Support.css
@@ -1,7 +1,7 @@
 .BodySupport{
   width: 100%;
   text-align: center;
-  background-image:linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%)git , url("https://fondosmil.com/fondo/52683.jpg");
+  background-image:linear-gradient(90deg, rgba(34, 58, 52, 0.757) 50%, rgba(25, 30, 21, 0.65) 100%) , url("https://fondosmil.com/fondo/52683.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
