--- a/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
+++ b/src/Components/Layout/AnoucementInfo/AnouncementInfo.css
@@ -27,6 +27,7 @@
     width: 100%;
     text-align: center;
     box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.30);
+    margin: 0 0 0.75em 0;
 }
 
 .user-target {
@@ -34,7 +35,7 @@
     justify-content: space-around;
     width: 95%;
     gap: 0.5em;
-    margin: 0 auto;
+    margin:  auto;
     padding: 1em 0;
 }
 
