--- a/src/Components/Layout/FormLogin/FormLogin.css
+++ b/src/Components/Layout/FormLogin/FormLogin.css
@@ -15,6 +15,7 @@
 
 .login-valid-info{
     width: 40%;
+    max-width: 600px;
     text-align: center;
     padding: 2% 0;
     background: #FFFFFF;
