--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -34,7 +34,8 @@
     cursor: pointer;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    padding: 0 0.5em 0 0;
 }
 .header-logo{
     cursor: pointer;
