--- a/src/Components/Page/AboutUs/AboutUs.css
+++ b/src/Components/Page/AboutUs/AboutUs.css
@@ -1,11 +1,78 @@
 .banner-about-container{
     width: 100%;
-    height: 450px;
+    height: 550px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: first baseline;
     background:  linear-gradient(90deg, rgba(6, 6, 6, 0.45) 20%, rgba(18, 19, 17, 0) 100%),url("../../../images/grupo.png"); 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+.about-slogan{
+    border: solid 2px red;
+    padding: 1em;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 2em;
+}
+
+.tags-container{
+    outline: solid 2px red; 
+    width: 100%;
+    padding: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 2em; 
+}
+ 
+.slogan-image-container{
+    width: 400px;
+    height: 300px;
+}
+
+.slogan-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.text-slogan-container{
+    outline: solid 1px red;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2em;
+}
+
+
+.tags-content{
+    display: flex;
+    align-items: center;
+    padding: 1em;
+    outline: solid 1px red;
+    width: 450px;
+    height: 200px;
+    gap: 1.25em;
+}
+
+.icon-about{
+    width: 30px;
+    height: 30px;
+    font-size: 15px;
+    border-radius: 255px;
+    padding: 1em;
+    color: rgb(89,228,168) ;
+    background : rgb(37,46,53);
+}
+
+.line-about{
+    width: 3px;
+    height: 80%;
+    border-radius: 255px;
+    background: rgb(47,56,63);
 }
