--- a/src/Components/Page/Chat/Chat.css
+++ b/src/Components/Page/Chat/Chat.css
@@ -73,3 +73,41 @@
     outline: 1px solid #324439;
     border: none;
 }
+
+.message-content{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 0.5em;
+    align-items: flex-start;
+    padding: 0.25em;
+}
+
+.messages-content{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 0.5em;
+    padding: 0.25em;
+}
+
+.send-message{
+    outline: solid 1px red;
+    border-radius: 20px;
+    padding: 0.5em 1em;
+    max-width: 500px;
+}
+
+.photo-content-msj{
+    width: 40px;
+    height: 40px;
+    border-radius: 255px;
+}
+
+.photo-msj{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 255px;
+}
