--- a/src/Components/Page/Chat/Chat.css
+++ b/src/Components/Page/Chat/Chat.css
@@ -11,7 +11,7 @@
     width: 90%;
     max-width: 950px;
     margin: 2em auto;
-    height: 85%;
+    height: 80%;
     background: #FFF;
     display: flex;
     box-shadow: 1px 5px 11px -2px #181717;
@@ -138,8 +138,8 @@
 }
 
 .text-message {
-    font-size: 14.5px;
-    padding: 0 1em;
+    font-size: 13px;
+    padding: 0.15em 2.5em;
     width: 100%;
     word-wrap: break-word;
 }
@@ -193,6 +193,14 @@
     .send-message {
         max-width: 250px;
     }   
+
+    .send-message-content{
+        height: 60px;
+    }
+    
+    .text-message{
+        font-size: 12px;
+    }
 }
 
 @media screen and (max-width: 380px){
@@ -200,7 +208,5 @@
         max-width: 220px;
     }
 
-    .text-message{
-        font-size: 13px;
-    }
+    
 }
